--- a/app/dev/src/styles.scss
+++ b/app/dev/src/styles.scss
@@ -1,1 +1,62 @@
+
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@use '@angular/material' as mat;
+// Plus imports for other components in your app.
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat.core();
+
+$main-palette: (
+    // 50 ... 900
+    500: #3D3B37,
+    contrast: (
+        // 50 ... 900
+        500: white,
+    )
+);
+
+$secondary-palette: (
+    // 50 ... 900
+    500: #915000,
+    contrast: (
+        // 50 ... 900
+        500: white,
+    )
+);
+
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue. Available color palettes: https://material.io/design/color/
+$my-primary: mat.define-palette($main-palette, 500);
+$my-accent: mat.define-palette($secondary-palette, 500);
+
+// The warn palette is optional (defaults to red).
+// DEFAULT
+$app-warn: mat.define-palette(mat.$red-palette);
+
+// Create the theme object. A theme consists of configurations for individual
+// theming systems such as "color" or "typography".
+$app-theme: mat.define-light-theme((
+  color: (
+    primary: $my-primary,
+   accent: $my-accent,
+    warn: $app-warn,
+  )
+));
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include mat.all-component-themes($app-theme);
+
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { 
+  background-color: mat.get-color-from-palette($my-primary, 500);
+  color: mat.get-color-from-palette($my-primary, '500-contrast');
+  margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; 
+}
