--- a/app/dev/src/styles.scss
+++ b/app/dev/src/styles.scss
@@ -9,10 +9,6 @@
 @include mat.core();
 @import "./theme.scss";
 
-// The warn palette is optional (defaults to red).
-// DEFAULT
-$app-warn: mat.define-palette(mat.$red-palette);
-
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
 $app-theme: mat.define-light-theme(
@@ -20,7 +16,7 @@ $app-theme: mat.define-light-theme(
     color: (
       primary: $my-primary,
       accent: $my-accent,
-      warn: $app-warn,
+      warn: $my-danger,
     ),
   )
 );
