ajout du formulaire recherche

--- a/app/dev/src/app/astroguessr/astroguessr.component.html
+++ b/app/dev/src/app/astroguessr/astroguessr.component.html
@@ -1,1 +1,18 @@
-<p>astroguessr works!</p>
+<section>
+    <div class="container">
+        <div class="container-content">
+            <mat-card>
+                <mat-card-title> Démarrer une nouvelle partie </mat-card-title>
+                <mat-card-content>
+                    <mat-form-field appearance="fill">
+                        <mat-label>Entrer votre pseudo </mat-label>
+                        <input [(ngModel)]="pseudo" name="pseudo" type="number" matInput />
+                    </mat-form-field>
+                    <mat-card-actions>
+                        <button mat-raised-button type="submit">  Démarrer </button>
+                    </mat-card-actions>
+                </mat-card-content>    
+            </mat-card>    
+        </div>
+    </div>
+</section> 
