--- a/app/dev/src/app/carte/carte.component.scss
+++ b/app/dev/src/app/carte/carte.component.scss
@@ -5,11 +5,11 @@
     display: flex;
     justify-content: center;
     width: 100%;
-
+    margin-top: 10px;
 }
 
 .container-content {
-    margin-top: 50px;
+   // margin-top: 50px;
     margin-bottom: 50px;
     justify-content: right;
     width: 50%;
@@ -55,7 +55,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 10px;
+   // margin-top: 10px;
 }
 
 
