--- a/app/dev/src/app/carte/carte.component.html
+++ b/app/dev/src/app/carte/carte.component.html
@@ -24,7 +24,7 @@
               </mat-grid-tile>
               <mat-grid-tile>
                 <mat-form-field appearance="fill">
-                  <mat-label>V Magnitude</mat-label>
+                  <mat-label>Magnitude</mat-label>
                   <input  [(ngModel)]="magnitude" name="magnitude" type="number" matInput />
                 </mat-form-field>
               </mat-grid-tile>
