ajout des 10 meilleurs joueurs

--- a/app/dev/src/app/astroguessr/astroguessr.component.scss
+++ b/app/dev/src/app/astroguessr/astroguessr.component.scss
@@ -18,6 +18,10 @@
     flex-direction: row;
 }
 
+table {
+    width: 100%;
+}
+
 .container-map-content-panel-find {
     width: 100%;
     background-color: mat.get-color-from-palette($my-accent, 500);
