--- a/app/dev/src/app/astroguessr/astroguessr.component.html
+++ b/app/dev/src/app/astroguessr/astroguessr.component.html
@@ -12,7 +12,29 @@
                         <button mat-raised-button (click)="login()">  Démarrer </button>
                     </mat-card-actions>
                 </mat-card-content>    
-            </mat-card>    
+            </mat-card>
+            
+            <mat-card style="margin-top: 50px;">
+                <mat-card-title>Top 10 meilleurs joueurs !</mat-card-title>
+                <mat-card-content>
+                    <table mat-table [dataSource]="bestJeu" class="mat-elevation-z8">
+                        <mat-progress-bar *ngIf="bestLoading" mode="indeterminate"></mat-progress-bar>
+
+                        <ng-container matColumnDef="pseudo">
+                            <th mat-header-cell *matHeaderCellDef> Pseudo </th>
+                            <td mat-cell *matCellDef="let jeu"> {{ jeu.pseudo }} </td>
+                          </ng-container>
+
+                        <ng-container matColumnDef="point">
+                          <th mat-header-cell *matHeaderCellDef> Points </th>
+                          <td mat-cell *matCellDef="let jeu"> {{ jeu.point }} </td>
+                        </ng-container>
+                      
+                        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                    </table>                      
+                </mat-card-content>
+            </mat-card>
         </div>
     </div>
     <div class="container-map" *ngIf="gameStarted">
@@ -26,7 +48,7 @@
                         <app-pixi-map #pixiMapTrouver [width]="200" [height]="200"></app-pixi-map>
                     </mat-card-content>
                     <mat-divider inset></mat-divider>
-                    <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+                    <mat-progress-bar *ngIf="findLoading" mode="indeterminate"></mat-progress-bar>
                     <mat-card-actions>
                         <button mat-button [style]="isFinding ? 'opacity: 0.9;': 'opacity: 1;'" (click)="isFinding = !isFinding">{{ isFinding ? 'Annuler': 'Valider' }}</button>
                     </mat-card-actions>
