--- a/app/dev/src/app/astroguessr/astroguessr.component.scss
+++ b/app/dev/src/app/astroguessr/astroguessr.component.scss
@@ -18,6 +18,14 @@
     flex-direction: row;
 }
 
+.mat-divider {
+    background-color: white;
+    left: auto !important;
+    position: relative !important;
+    margin-bottom: 25px;
+    margin-top: 10px;
+}
+
 table {
     width: 100%;
 }
@@ -35,10 +43,17 @@ table {
     color: white;
 }
 
+.mat-card-subtitle {
+    color: white;
+}
+
 .mat-expansion-panel-header {
    position: relative;
 }
 
+.alert {
+    margin-bottom: 20px;
+}
 
 .mat-card-actions a, .mat-card-actions button {
     background-color: mat.get-color-from-palette($my-optionnal, 500);
