--- a/app/dev/src/app/research/research.component.html
+++ b/app/dev/src/app/research/research.component.html
@@ -163,6 +163,13 @@
                   <td mat-cell *matCellDef="let row">{{ row.decRadians }}</td>
                 </ng-container>
 
+                <ng-container matColumnDef="idConstellation">
+                  <th mat-header-cell *matHeaderCellDef>Constellations</th>
+                  <td mat-cell *matCellDef="let row">
+                    <span *ngFor="let constellation of row?.idConstellation">{{ constellation.latinName }}</span>
+                  </td>
+                </ng-container>
+
                 <ng-container matColumnDef="actions">
                   <th mat-header-cell *matHeaderCellDef>Actions</th>
                   <td mat-cell *matCellDef="let row">
